--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,7 +14,8 @@
     "default_height": 350
   },
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "type": "module"
   },
   "content_scripts": [
     {
