--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "FITD",
-  "version": "1.1",
+  "version": "1.11",
   "description": "A smart wardrobe extension that helps you create outfits from your favorite clothing items.",
   "action": {
     "default_popup": "index.html",
@@ -20,7 +20,8 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"]
+      "js": ["content.js"],
+      "run_at": "document_idle"
     }
   ],
   "permissions": [
